CSS/global_style.css
/* ... */
@font-face {
  font-family: "Cera Pro";
  src: url("CeraPro-Medium.woff2");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Cera Pro";
}

/*STILE NAVBAR*/
.navbar-container-general-mobile {
  display: none;
}

.navbar-container-general {
  position: sticky;
  height: auto;
  width: 100%;
}

.navbar {
  display: flex;
  justify-content: space-between;
  width: 100%;
  max-width: 100rem;
  align-items: center;
  height: 3.7rem;
  background-color: #f8f8f8;
  margin: 0 1.5rem;
}

#nav-container {
  background-color: #f8f8f8;
  width: 100%;
  display: flex;
  justify-content: center;
}

.area-giochi {
  display: flex;
  margin-left: 0 2rem;
}

.button-area-giochi {
  display: flex;
  gap: 5px;
  background-color: #abd9ff;
  text-decoration: none;
  padding: 5px;
  padding-left: 12px;
  padding-right: 12px;
  border-radius: 3px;
  color: black;
  font-size: small;
  font-weight: 500;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
}

.button-area-giochi:hover {
  background-color: #f8f8f8;
}

.mar10-button-lr {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  padding-left: 11em;
}

.mar10-day-sale {
  font-size: 0.75rem;
  line-height: 1.1875rem;
  font-weight: 400;
}

.mar10 {
  display: flex;
  padding-left: 50px;
  padding-right: 50px;
  gap: 10px;
}

.mar10-shop-now {
  font-size: 0.75rem;
  font-weight: 400;
  text-decoration: none;
  color: #005ad2;
}
.mar10-shop-now:hover {
  text-decoration: underline;
}

.sign-in-box {
  display: flex;
  align-items: center;
  gap: 30px;
}

.sign-in {
  display: flex;
  padding: 0;
  height: auto;
  font-size: large;
  align-items: center;
  gap: 20px;
}

.img-sign-in {
  padding: 0;
  height: auto;
}

.btn {
  cursor: pointer;
}

.sign-in-join {
  display: flex;
  align-items: center;
  gap: 10px;
}

.sign-in-link-style {
  display: flex;
  align-items: center;
  gap: 10px;
  font-size: 0.75rem;
  font-weight: 500;
  text-decoration: none;
  color: black;
}

/**style menu**/
.menu-container-flex {
  display: flex;
}

.menu-container {
  display: flex;
  background-color: rgb(255, 213, 2);
  width: 100%;
  justify-content: center;
}

.menu {
  display: flex;
  height: 4.7rem;
  width: 100%;
  max-width: 100rem;
  margin: 0 2rem;
  justify-content: space-between;
}

.menu-logo {
  height: 55px;
  width: 55px;
}

.menu-logo-links {
  font-size: 1em;
  display: flex;
  align-items: center;
  gap: 60px;
  z-index: 3;
}

.menu-links-cnt {
  font-size: 1em;
  display: flex;
  gap: 40px;
}

.menu-link {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: black;
  font-weight: 500;
}

.hover-underline:hover {
  font-size: 1em;
  text-decoration: underline;
  text-decoration-thickness: 0.3em;
}

.mday-link {
  font-size: 1rem;
  font-weight: 300;
  background-color: white;
  color: red;
  padding: 10px;
  border-radius: 7px;
}

.mday-link:hover {
  background-color: black;
  color: white;
}
.menu-search {
  display: flex;
  z-index: 4;
  background-color: white;
  border-radius: 50px;
}

.menu-search-shop {
  display: flex;
  align-items: center;
  gap: 25px;
}

.search-logo {
  height: 40px;
  width: 40px;
  padding: 10px;
  background-color: white;
  border: none;
  border-top-left-radius: 50%;
  border-top-right-radius: 50%;
  border-bottom-left-radius: 50%;
  border-bottom-right-radius: 50%;
  cursor: pointer;
  outline: none;
  box-shadow: none;
}
.search-logo.show {
  display: flex;
}
.svg-quit {
  display: none;
}
.svg-quit.active {
  display: inline-block;
  margin-left: -50px;
  z-index: 1000;
  cursor: pointer;
}

#searchbar {
  display: none;
}

#searchbar.active {
  display: block;
  padding: 0px;
  display: flex;
  -moz-box-align: center;
  align-items: center;
  position: relative;
  background-color: rgb(255, 255, 255);
  border-radius: 1.25rem;
  border: none;
  width: 300px;
}
/* Overlay */
.overlay-search.show{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 3;
  transition: left 0.1s ease-out;
}

input[type="text"]:focus {
  outline: none; /* Rimuove il bordo di focus */
  /* Aggiungi qui eventuali altri stili desiderati */
}

.overlay-search.active {
  left: 0;
}

.heart-logo {
  color: black;
}

.shop-logo {
  color: black;
}

/* STILE SECTION 1 */
.m-section1-mobile {
  display: none;
}

.contenitore-generale {
  width: 100%;
  margin: 0 auto;
}

.contenitore-main1 {
  position: relative;
  max-width: 100rem;
  margin: 0px auto;
  z-index: 0;
}

.contenitore-main1.hiddenIndex {
  z-index: -1;
}

.testoslider-main1 {
  position: absolute;
  max-width: 35%;
  left: 6.475rem;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.align-slider-main1 {
  height: auto;
  text-align: center;
  margin: 0;
  background-color: rgb(255, 255, 255);
}

.align-slider-main1 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.testoslider-main1 img {
  width: 175px;
  margin-bottom: 20px;
}

.testoslider-main1 h1 {
  font-size: 2.5rem;
  line-height: 4.12rem;
  font-weight: 400;
}

.testoslider-main1 h3 {
  text-align: left;
  margin-bottom: 50px;
  line-height: 1.75rem;
  font-size: 1.125rem;
  font-weight: 400;
}
@media screen and (min-width: 601px) {
  .buttons-main1 {
    -moz-box-pack: start;
    justify-content: flex-start;
  }
}
.buttons-main1 {
  display: flex;
  flex-wrap: wrap;
  margin: 0px -0.625rem;
  gap: 20px;
  padding-left: 10px;
}

.testoslider-main1 a {
  text-decoration: none;
  width: auto;
  border-width: 1px;
  border-style: solid;
  border-collapse: collapse;
  text-align: center;
  border-color: transparent;
  border-radius: 4px;
  font-size: 1rem;
  line-height: 1.5625rem;
  font-weight: 500;
  text-transform: none;
  padding: 0.625rem 1.325rem 0.625rem 1.325rem;
  background: rgb(0, 0, 0);
  color: rgb(255, 255, 255);
  margin-top: -25px;
}
/* ... */

